--- a/style.css
+++ b/style.css
@@ -35,11 +35,42 @@ body{
     border-radius: 15px 0 0 15px;
 }
 
+.author-div{
+    margin: 1rem 0 0 0;
+}
+
+.paragraph{
+    margin: 1rem 0 0 0;
+    font-size: 13px;
+}
+
 .text-container{
     width: 60%;
-    padding: 1rem;
+    padding: 2rem;
 }
 
 h1{
     font-size: 1.5rem;
+    color: hsl(217, 19%, 35%)
+}
+
+p{
+    color: hsl(214, 17%, 51%);
+}
+
+.namenddate{
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 1rem;
+}
+
+.nad-img img{
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+}
+
+.name_of_author{
+    font-weight: 700;
+    color: hsl(217, 19%, 35%);
 }
