--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    font-family: "Manrope", sans-serif;
+    font-family: "Manrope", system-ui;
     background-color: hsl(210, 46%, 95%);
 }
 
@@ -23,6 +23,7 @@ body{
     background-color: #fff;
     border-radius: 15px;
     box-shadow: 1px 1px 2px hsl(217, 19%, 35%);
+    position: relative;
 }
 
 .img-container{
@@ -37,6 +38,10 @@ body{
 
 .author-div{
     margin: 1rem 0 0 0;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .paragraph{
@@ -73,4 +78,35 @@ p{
 .name_of_author{
     font-weight: 700;
     color: hsl(217, 19%, 35%);
+}
+
+.icon-div{
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    background-color: hsl(210, 46%, 95%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.share-expand{
+    background-color: hsl(217, 19%, 35%);
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-evenly;
+    min-width: 200px;
+    height: 50px;
+    border-radius: 10px;
+    position: absolute;
+    bottom: 7rem;
+    right: -3rem;
+    z-index: 1;
+}
+
+.share-expand p{
+    color: hsl(214, 17%, 51%);
+    letter-spacing: 4px;
 }
