--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     min-height: 200px;
     background-color: #fff;
     border-radius: 15px;
-    box-shadow: 1px 1px 2px hsl(217, 19%, 35%);
+    box-shadow: 0.5px 0.5px 1px hsl(214, 17%, 51%);
     position: relative;
 }
 
@@ -84,11 +84,12 @@ p{
     height: 40px;
     width: 40px;
     border-radius: 50%;
-    background-color: hsl(210, 46%, 95%);
+    background-color: #ecf2f8;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    box-shadow: 0.5px 0.5px 1px hsl(214, 17%, 51%);
 }
 
 .share-expand{
@@ -96,7 +97,7 @@ p{
 }
 
 .active{
-    background-color: hsl(217, 19%, 35%);
+    background-color: #48556a;
     display: flex;
     flex-flow: row nowrap;
     align-items: center;
@@ -113,4 +114,118 @@ p{
 .share-expand p{
     color: hsl(214, 17%, 51%);
     letter-spacing: 4px;
+}
+
+.i-span{
+    display: none;
+}
+
+.i-span_two{
+    color: hsl(217, 19%, 35%);
+}
+
+
+@media (min-width: 360px){
+    .container{
+        flex-flow: column nowrap;
+        width: 360px;
+    }
+
+    .img-container{
+        width: 100%;
+    }
+
+    .img-container img{
+        border-radius: 20px 20px 0 0;
+    }
+
+    h1{
+        font-size: 1.1rem;
+        margin-bottom: 1rem;
+    }
+
+    .paragraph{
+        margin-top: 1rem;
+    }
+
+    .text-container{
+        padding: 2rem;
+        width: 100%;
+    }
+
+    .active{
+        width: 100%;
+        height: 75px;
+        bottom: 0%;
+        right: 0;
+        border-radius: 0 0 10px 10px;
+    }
+
+    .i-span{
+        color: #fff;
+        background-color: hsl(214, 17%, 51%);
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+}
+
+@media (min-width: 576px){
+    .container{
+        width: 400px;
+    }
+}
+
+@media (min-width: 768px){
+    .container{
+        flex-flow: row nowrap;
+        width: 700px;
+    }
+
+    h1{
+        font-size: 1.2rem;
+    }
+
+    .img-container{
+        width: 40%;
+    }
+
+    .img-container img{
+        border-radius: 20px 0 0 20px;
+    }
+
+    .text-container{
+        width: 60%;
+    }
+
+    .i-span{
+        display: none;
+    }
+
+    .active{
+        background-color: hsl(217, 19%, 35%);
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        justify-content: space-evenly;
+        width: 200px;
+        height: 50px;
+        border-radius: 10px;
+        position: absolute;
+        bottom: 7rem;
+        right: -2rem;
+        z-index: 1;
+        padding: 0.5rem;
+    }
+}
+
+@media (min-width: 992px){
+    .active{
+        right: -5rem;
+        width: 250px;
+    }
 }
